--- a/client/src/Page/MutualFunds.css
+++ b/client/src/Page/MutualFunds.css
@@ -3,7 +3,7 @@ body {
   }
   
   .mutual-funds-container {
-    margin: 20px;
+    margin: 0px;
   }
   
   .mutual-funds-header {
@@ -53,7 +53,9 @@ body {
   }
   
   .mutual-funds-cards {
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 20px;
   }
@@ -64,6 +66,7 @@ body {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     cursor: pointer;
+    width: 30%;
   }
   
   .mutual-funds-card:hover {
